[gd_scene load_steps=11 format=3 uid="uid://ctcsgb46p2jrr"]

[ext_resource type="Texture2D" uid="uid://xb7yaaswlejl" path="res://Images/PNjs/Mago_Idle_0.PNG" id="1_5hoq7"]
[ext_resource type="Script" path="res://Actors/Area2D.gd" id="3_rs27m"]
[ext_resource type="Texture2D" uid="uid://cj8k0qj8bur7o" path="res://Images/IMG_0183.PNG" id="4_fxheb"]
[ext_resource type="PackedScene" uid="uid://b0miw64t310pt" path="res://Actors/DialogBox.tscn" id="5_crxwn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q6f1q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5hoq7")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_el03o"]
radius = 117.273

[sub_resource type="SpriteFrames" id="SpriteFrames_ohg70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_fxheb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_antck"]
resource_name = "Interaction_anim"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractIcon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.5, 0.5), Vector2(0.3, 0.3), Vector2(0.4, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractIcon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="Animation" id="Animation_eh3vu"]
resource_name = "new_animation"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PnjAnim:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6pbtp"]
_data = {
"Interaction_anim": SubResource("Animation_antck"),
"new_animation": SubResource("Animation_eh3vu")
}

[node name="Pnj" type="Node2D"]
process_mode = 3

[node name="PnjAnim" type="AnimatedSprite2D" parent="."]
modulate = Color(0.992157, 1, 1, 1)
sprite_frames = SubResource("SpriteFrames_q6f1q")
animation = &"Idle"
autoplay = "Idle"
offset = Vector2(0, -120)

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("3_rs27m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 23)
scale = Vector2(1.8, 1.8)
shape = SubResource("CircleShape2D_el03o")

[node name="InteractIcon" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -280)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_ohg70")

[node name="DialogBox" parent="." instance=ExtResource("5_crxwn")]
offset = Vector2(960, 800)
scale = Vector2(0.4, 0.4)
transform = Transform2D(0.4, 0, 0, 0.4, 960, 800)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6pbtp")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6pbtp")
}
autoplay = "new_animation"

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="ready" from="Area2D" to="Area2D" method="_ready"]
